--- a/web.htm
+++ b/web.htm
@@ -1,9 +1,9 @@
 
 
 
-index.htm
-  |---suma.html
-  |---resta.html
-  |---figurasgeometricas.html
+<a href="suma.html">Suma</a>
+<a href="resta.html">Resta</a>
+<a href="caratula.html">Carátula</a>
 
    
+
