--- a/index.html
+++ b/index.html
@@ -67,3 +67,26 @@
     </div>
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Carátula</title>
+</head>
+<body style="text-align:center;">
+
+  <h1>UNIVERSIDAD PRIVADA DE TRUJILLO</h1>
+  <h2>PROYECTO FINAL</h2>
+  <h3>Ejemplo básico para enseñar matemáticas</h3>
+
+  <img src="imagen1.png" width="200"><br><br>
+
+  <a href="menu.html">
+    <button style="font-size:18px; padding:10px 20px;">
+      INICIAR EXPOSICIÓN
+    </button>
+  </a>
+
+</body>
+</html>
